--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,43 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.contentstack.sdk</groupId>
     <artifactId>java</artifactId>
-    <version>1.7.0</version>
+    <version>1.8.0</version>
     <packaging>jar</packaging>
     <name>contentstack-java</name>
-    <description>Java SDK for Contentstack Content Delivery API, Contentstack is a headless CMS with an API-first
-        approach
-    </description>
+    <description>Java SDK for Contentstack Content Delivery API</description>
     <url>https://github.com/contentstack/contentstack-java/</url>
+
+
+    <properties>
+        <!--update sdk version before every release push for SNAPSHOT/RELEASE-->
+        <sdk.version.snapshot>v1.8.0-SNAPSHOT</sdk.version.snapshot>
+        <sdk.version.release>v1.8.0</sdk.version.release>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <surefire-report-plugin.version>2.22.0</surefire-report-plugin.version>
+        <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
+        <maven-javadoc-plugin.version>3.0.0</maven-javadoc-plugin.version>
+        <dotenv-source.version>5.2.2</dotenv-source.version>
+        <rxjava-source.version>3.1.2</rxjava-source.version>
+        <retrofit-source.version>2.9.0</retrofit-source.version>
+        <converter-gson-source.version>2.9.0</converter-gson-source.version>
+        <loggin.version>4.9.2</loggin.version>
+        <jococo-plugin.version>0.8.5</jococo-plugin.version>
+        <lombok-source.version>1.18.22</lombok-source.version>
+        <junit-jupiter.version>5.8.1</junit-jupiter.version>
+        <junit-jupiter-engine.version>5.8.0-M1</junit-jupiter-engine.version>
+        <junit-vintage-engine.version>5.8.1</junit-vintage-engine.version>
+        <gson.version>2.8.8</gson.version>
+        <json-simple-version>1.1.1</json-simple-version>
+        <maven-site-plugin.version>3.3</maven-site-plugin.version>
+        <maven-gpg-plugin.version>1.5</maven-gpg-plugin.version>
+        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+        <nexus-staging-maven-plugin.version>1.6.7</nexus-staging-maven-plugin.version>
+        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+        <json-version>20210307</json-version>
+        <contentstack-utility-version>1.1.0</contentstack-utility-version>
+    </properties>
 
     <parent>
         <groupId>org.sonatype.oss</groupId>
@@ -44,16 +74,6 @@
         <url>http://contentstack.com</url>
     </organization>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.sourceEncoding>UTF-8</project.reporting.sourceEncoding>
-        <java.version>1.8</java.version>
-        <build-helper.version>3.0.0</build-helper.version>
-        <surefire-report-plugin.version>2.22.0</surefire-report-plugin.version>
-        <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
-        <maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
-    </properties>
-
     <developers>
         <developer>
             <name>shaileshmishra</name>
@@ -83,39 +103,63 @@
 
 
     <dependencies>
-
         <dependency>
             <groupId>com.contentstack.sdk</groupId>
             <artifactId>utils</artifactId>
-            <version>1.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.github.cdimascio</groupId>
-            <artifactId>java-dotenv</artifactId>
-            <version>5.2.2</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.1</version>
-            <scope>test</scope>
+            <version>${contentstack-utility-version}</version>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20190722</version>
+            <version>${json-version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.5</version>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>java-dotenv</artifactId>
+            <version>${dotenv-source.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.13.2</version>
+            <groupId>io.reactivex.rxjava3</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>${rxjava-source.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>retrofit</artifactId>
+            <version>${retrofit-source.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>converter-gson</artifactId>
+            <version>${converter-gson-source.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>logging-interceptor</artifactId>
+            <version>${loggin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok-source.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit-jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>${junit-vintage-engine.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>${json-simple-version}</version>
+        </dependency>
     </dependencies>
 
 
