sonar vulnerability fixed

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ factoryConfiguration.json
 bin/
 tmp/
 *.tmp
+.vscode
 *.bak
 *.swp
 *~.nib
@@ -90,7 +91,7 @@ local.properties
 
 # Generated files
 .idea/**/contentModel.xml
-
+cover
 # Sensitive or high-churn files
 .idea/**/dataSources/
 .idea/**/dataSources.ids
@@ -266,4 +267,5 @@ java.iml
 src/main/resources/
 /.idea/
 /src/main/java/com/contentstack/sdk/models/
+/.vscode/
 /.vscode/
